   lost packets.
 * Added t38pt_usertpsource option. See sip.conf.sample for details.
 * Added SIPnotify AMI command, for sending arbitrary SIP notify commands.
 * 'sip show peers' and 'sip show users' display their entries sorted in
    alphabetical order, as opposed to the order they were in, in the config 
    file or database. 

IAX Changes
-----------
 * Existing DNS manager lookups extended to check for SRV records.

CLI Changes
-----------
  * New CLI command, "config reload <file.conf>" which reloads any module that
     references that particular configuration file.  Also added "config list"
     which shows which configuration files are in use.
  * New CLI commands, "pri show version" and "ss7 show version" that will
     display which version of libpri and libss7 are being used, respectively.
     A new API call was added so trunk will now have to be compiled against
     a versions of libpri and libss7 that have them or it will not know that
     these libraries exist.

DNS manager changes
-------------------
  * Addresses managed by DNS manager now can check to see if there is a DNS
    SRV record for a given domain and will use that hostname/port if present.

AMI - The manager (TCP/TLS/HTTP)
--------------------------------
  * The Status command now takes an optional list of variables to display
    along with channel status.

ODBC Changes
------------
  * res_odbc no longer has a limit of 1023 total possible unshared connections,
    as some people were running into this limit.  This limit has been increased
    to 4.2 billion.

Queue changes
-------------
  * The TRANSFER queue log entry now includes the the caller's original
    position in the transferred-from queue.
  * A new configuration option, "timeoutpriority" has been added. Please see the section labeled
    "QUEUE TIMING OPTIONS" in configs/queues.conf.sample for a detailed explanation of the option
    as well as an explanation about timeout options in general
